src/snapshots/geometrid__shape__tests__O tetromino.snap
---
source: src/shape.rs
expression: outline
---
[
    RelativeCoordinate {
        x: 0,
        y: -1,
    },
    RelativeCoordinate {
        x: 2,
        y: -1,
    },
    RelativeCoordinate {
        x: 2,
        y: 1,
    },
    RelativeCoordinate {
        x: 0,
        y: 1,
    },
]
