src/snapshots/geometrid__shape__tests__P pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: 0,
        y: -1,
        width: 1,
        height: 3,
    },
    Rectangle {
        x: 1,
        y: -1,
        width: 1,
        height: 2,
    },
]
